--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^18.2.0",
